<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo"
        android:text="@string/bill_amount_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextBillAmount"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/amount_default_value_string"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo"
        android:text="@string/tip_percentage_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/seekBarTipPrec"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="30"
        android:progress="12"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTipPrec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/editTextTipPrec" />

    <EditText
        android:id="@+id/editTextTipPrec"
        android:layout_width="@dimen/tip_edit_text_size"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/editTextBillAmount"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Switch
        android:id="@+id/switchRoundUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/round_string"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTotalAmount"
        app:layout_constraintStart_toEndOf="@+id/editTextTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/editTextTotalAmount"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/editTextTipAmount"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount_default_value_string"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/editTextTipPrec"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTotalAmount"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount_default_value_string"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/editTextTipAmount"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/clear_string"
        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/currency_sign_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBillAmount"
        app:layout_constraintEnd_toStartOf="@+id/editTextBillAmount"
        app:layout_constraintTop_toTopOf="@+id/editTextBillAmount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/currency_sign_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTipAmount"
        app:layout_constraintEnd_toStartOf="@+id/editTextTipAmount"
        app:layout_constraintTop_toTopOf="@+id/editTextTipAmount" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/currency_sign_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTotalAmount"
        app:layout_constraintEnd_toStartOf="@+id/editTextTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/editTextTotalAmount" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/percentage_sign_string"
        android:textSize="@dimen/text_view_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTipPrec"
        app:layout_constraintStart_toEndOf="@+id/editTextTipPrec"
        app:layout_constraintTop_toTopOf="@+id/editTextTipPrec" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/baloo"
        android:text="@string/tip_amount_string"
        android:textSize="@dimen/text_view_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo"
        android:text="@string/total_amount_string"
        android:textSize="@dimen/text_view_font_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="ver 0.95"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>